# hex_machina_v2

./: .cursorrules  .donotwatchlist  .gitignore  .pre-commit-config.yaml  .ruff.toml  .watchlist  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini  test_extraction_methods.py
.cursor/rules/: documentation.mdc  general-guidelines.mdc  opinionated-coding-clarity.mdc  opinionated-coding-guidelines.mdc  opinionated-ds-role.mdc  opinionated-ds-stack.mdc  opinionated-others.mdc  python-guidelines.mdc
.github/workflows/: ci.yml
config/: scraping_config.yaml
migration/: migrate_tinydb_to_duckdb.py
src/hex_machina/: __init__.py
src/hex_machina/enrichment/: __init__.py  evaluation.py  llm.py  prompts.py  workflows.py
src/hex_machina/ingestion/: __init__.py  article_models.py  article_parser.py  config_loader.py  config_models.py  content_validator.py  generate_ingestion_report.py  ingestion_domain_evaluation_report.py  ingestion_evaluation_report.py  ingestion_report.py  ingestion_report_generator.py  ingestion_runner.py  ingestion_script.py  log_formatter.py  middleware.py  models.py  pipelines.py  scrapy_pipelines.py  test_generate_ingestion_report.py  utils.py
src/hex_machina/ingestion/scrapers/: __init__.py  base_article_scraper.py  playwright_rss_article_scraper.py  rss_article_scraper.py  stealth_playwright_rss_article_scraper.py
src/hex_machina/ingestion/scripts/: generate_ingestion_domain_evaluation_report.py  generate_ingestion_evaluation_report.py  ingestion_script.py  remove_ingestion_script.py
src/hex_machina/reporting/: __init__.py  base_report_generator.py  chart_utils.py  report_builder.py
src/hex_machina/storage/: adapter.py  duckdb_adapter.py  manager.py  models.py
src/hex_machina/storage/enrichment/: models.py
src/hex_machina/utils/: __init__.py  date_parser.py  git_utils.py  json_utils.py  logging_utils.py
src/hex_machina/workflows/: utils.py
tests/: test_smoke.py
tests/ingestion/: check_ingestion_pipeline.py  run_ingestion_with_local_server.py  test_base_article_scraper.py  test_config_loader.py  test_content_validator.py  test_ingestion_pipeline.py  test_ingestion_report_generator.py  test_ingestion_runner.py  test_playwright_rss_article_scraper.py  test_rss_article_scraper.py  test_stealth_playwright_rss_article_scraper.py  testing_scraping_config.yaml
tests/integration/: README.md  integration_scraping_config.yaml  test_ingestion_e2e.py
tests/integration/last_test_e2e_report/ingestion_report_1_2025-07-24_10-05-29/: ingestion_report_1.html
